--- a/Gioco dei dadi/index.html
+++ b/Gioco dei dadi/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bootstrap-template</title>
+        <title>Gioco dei dadi</title>
 
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
@@ -13,6 +13,10 @@
     </head>
     <body>
 
+        <div class="container">
+
+        </div>
+        
        <script type="text/javascript" src="./javascript/scripts.js" ></script>
     </body>
 </html>
